fix(spreadsheet): for #1291, change margin of blocks below gapcursor, cell transition and padding (#1396)

--- a/packages/brickdoc-editor/src/components/blockViews/Spreadsheet/Spreadsheet.less
+++ b/packages/brickdoc-editor/src/components/blockViews/Spreadsheet/Spreadsheet.less
@@ -160,25 +160,28 @@
               background: transparent;
             }
           }
-          input {
-            display: block;
-            line-height: 22px;
-            font-size: 14px;
-            width: 100%;
-            &:focus {
-              outline: 2px solid @table-action-hover-color;
-            }
-          }
+          // input {
+          //   display: block;
+          //   line-height: 22px;
+          //   font-size: 14px;
+          //   width: 100%;
+          //   outline: 2px solid transparent;
+          //   &:focus {
+          //     outline: 2px solid @table-action-hover-color;
+          //   }
+          // }
           .brickdoc-formula-editor {
             display: flex;
             align-items: stretch;
             .ProseMirror {
               // background: none;
-              padding: 8px 10px;
+              padding: 8px 10px 9px;
               border: 0;
               border-radius: 0;
               line-height: 20px;
               font-size: 14px;
+              outline: 2px solid transparent;
+              transition: none;
               p {
                 line-height: 20px;
                 font-size: 14px;
